<resources>
    <string name="app_name">My Digital Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contact">Add Contact Number</string>
    <string name="search">Search</string>
    <string name="update_contact">Update Contact Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="account_info">Account Information</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please Wait…</string>
    <string name="signing_in">Signing In…</string>
    <string name="signing_up">Signing Up…</string>
    <string name="loading_account">Loading Account…</string>

    <!--  Form Controls  -->
    <string name="field_required">Required</string>
    <string name="error_empty_field">Cannot be empty</string>
    <string name="updating_account">Updating Account</string>
    <string name="updating_password">Updating Password</string>
    <string name="loading_data">Loading Data</string>
    <string name="introduction">Hi! My name is James Dave Navor and this is an app the I developed while learning how to develop a mobile application.
\nThis app is called My Digital Profile which is inspired by PHP which was originally known as \'Personal Home Page\'.
This is a project I\'ve been working on since I\'ve studied Web Development and have completed it on Mobile App Development.
\nI developed this app with the idea of how I could showcase my skills while considering the use case for other users too.
This app will most likely be used by job-seekers who want to show their profile in the way I formatted it.
\nThis app is still underdeveloped and I\'m still learning more things to further enhance my skills.
This will not be the final output and it will be further enhanced in the future.
\nIf you are also a developer and is interested in looking into my code, or if you are interested into looking into my profile inside this app,
You can view it through the buttons below.</string>
    <string name="account_id">cKpaCr9luoh7dOmE3mzGbLfFtHd2</string>
    <string name="profile_id">hpozTLJoD37UI4OsygCZ</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="permission_required">Permission Required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="about_app">About My Digital Profile 2</string>
    <string name="select_profile">Select Profile</string>
    <string name="profession">Profession</string>
    <string name="is_public">Public</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="organize">Organize</string>
    <string name="about">About</string>
    <string name="empty_skills">Skill List is Empty. Please add a Skill.</string>
    <string name="add">Add</string>
    <string name="skill_sub_category_name">Skill Sub Category Name</string>
    <string name="title">Title</string>
    <string name="main_category">Main Category</string>
    <string name="subtitle">Subtitle</string>
    <string name="skill">Skill</string>
    <string name="skills">Skills</string>
    <string name="skill_sub_category">Skill Sub Category</string>
    <string name="skill_main_category">Skill Main Category</string>
    <string name="subcategories">Subcategories</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create_profile">Create Profile</string>
    <string name="profile_publicity_rule">Only One Profile can be Public</string>
    <string name="website">Website</string>
    <string name="company_address">Company Address</string>
    <string name="company">Company</string>
    <string name="employment_end">Employment End</string>
    <string name="date_employed">Date Employed</string>
    <string name="job_description">Job Description</string>
    <string name="contact_number">Contact Number</string>
    <string name="position">Position</string>
    <string name="degree">Degree</string>
    <string name="field_of_study">Field of Study</string>
    <string name="date_enrolled">Date Enrolled</string>
    <string name="school_name">School Name</string>
    <string name="date_graduated">Date Graduated</string>
    <string name="school_address">School Address</string>
    <string name="school_website">School Website</string>
    <string name="migrating_data">Migrating Data</string>
    <string name="retrieving_profile">Retrieving Account and Profile</string>
    <string name="migrating_account">Migrating Account</string>
    <string name="migrating_profile">Migrating Profile</string>
    <string name="retrieving_profiles">Retrieving Profiles</string>
    <string name="retrieving_profile_data">Retrieving Profile Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="view_profile">View Profile</string>
    <string name="git_repository">Git Repository</string>
    <string name="retry">Retry</string>
    <string name="no_results">No Results</string>
    <string name="refresh">Reload</string>

    <string-array name="degrees">
        <item>Bachelor of Science</item>
        <item>Bachelor of Arts</item>
        <item>Masters</item>
        <item>Ph.D.</item>
    </string-array>
</resources>