<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/skill_main_category"
        style="@style/TextAppearance.AppCompat.Title"
        />
    <TextView
        android:id="@+id/label_skill_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:labelFor="@id/subtitle"
        android:text="@string/skill_sub_category"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:lines="1"
            android:textAlignment="center"
            android:hint="@string/subtitle"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/label_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/skills"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_skill"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="5dp"
        android:layout_marginHorizontal="10dp"
        tools:listitem="@layout/item_skill_edit"
        />
    <TextView
        android:id="@+id/list_empty"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/empty_skills"
        android:textAlignment="center"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/TextAppearance.MaterialComponents.Body1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_skill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:lines="1"
                android:hint="@string/skill"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_add_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.AppCompat.Button.Small"
            android:src="@drawable/ic_add_24"
            android:text="@string/add"
            />
    </LinearLayout>
    <include layout="@layout/layout_edit_buttons"
        android:id="@+id/edit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/til_skill"
        app:layout_constraintEnd_toEndOf="parent"
        />
</LinearLayout>