<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_app"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            />
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_24"
            style="@style/Widget.AppCompat.Button.Small"
            android:foreground="?attr/selectableItemBackground"
            android:background="?attr/selectableItemBackgroundBorderless"
            />
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/introduction"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_git"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/git_repository"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/view_profile"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>
</LinearLayout>