<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:text="@string/main_category"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:lines="1"
            android:textAlignment="center"
            android:hint="@string/title"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/label_subtitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textStyle="bold"
        android:text="@string/subcategories"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_skills"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingVertical="5dp"
        android:layout_marginHorizontal="10dp"
        tools:listitem="@layout/item_skills_sub_drag"
        />

    <include layout="@layout/layout_edit_buttons"
        android:id="@+id/edit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        />
</LinearLayout>