<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/label_skill_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Skill Main Category"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/label_skill_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="Skill Sub Category"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/label_skill_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_skill_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_skill_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/skill_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skill_sub_category_name"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/label_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="Skills"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintTop_toBottomOf="@id/til_skill_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_skill"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="5dp"
        android:layout_marginHorizontal="10dp"
        android:visibility="invisible"
        tools:visibility="visible"
        tools:listitem="@layout/viewholder_skill_edit"
        />
    <TextView
        android:id="@+id/list_empty"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/empty_skills"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Body1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_skill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginStart="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Skill Name"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_add_skill"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:theme="@style/Widget.AppCompat.Button.Small"
            android:src="@drawable/ic_add_24"
            android:text="@string/add"
            />
    </LinearLayout>
    <include layout="@layout/layout_edit_buttons"
        android:id="@+id/edit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/til_skill"
        app:layout_constraintEnd_toEndOf="parent"
        />
</LinearLayout>